# portfolio_v2

./: Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
app/: settings.py  urls.py
app/common/: config_prod.py
app/common/config/: config_prod.py
deploy/prod/: build.sh  deploy.sh  docker-compose.yaml  init.sh  init_db.sql  uwsgi  vhost
portfolio/: admin.py  forms.py  models.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_project_image.py  0003_alter_project_image.py  0004_alter_skill_image.py  0005_alter_project_image_alter_skill_image.py  0006_alter_skill_image.py  0007_alter_project_image_alter_project_subtitle.py  0008_skill_percent.py  0009_project_url_alter_project_description.py  0010_alter_project_image.py  0011_project_is_active_skill_is_active.py  0012_alter_project_image_alter_skill_image.py  0013_project_github.py
portfolio/static/css/: style.css
portfolio/static/js/: backTopBtn.js  index.js  modal.js
portfolio/templates/portfolio/: index.html
portfolio/templates/portfolio/components/: contact.html  header.html  projects.html  skills.html  summary.html
portfolio/templates/portfolio/partials/: footer.html  header.html  meta.html  modal.html  project_snippet.html  skills.html  skills_snippet.html  summary.html
templates/: base.html
