[tool.poetry]
name = "portfolio-v2"
version = "0.1.0"
description = ""
authors = ["Jean-Marie Geronimi <jm.geronimi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
pillow = "^10.1.0"
uwsgi = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
